--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "name": "reactwebpage",
-  "version": "0.1.0",
+  "version": "1",
   "private": true,
   "dependencies": {
+    "@chakra-ui/react": "^1.3.4",
+    "@emotion/react": "^11.1.5",
+    "@emotion/styled": "^11.1.5",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "framer-motion": "^3.10.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.3",
